# motif-chess

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  AGENTS.md  BENCHMARKS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONVENTIONS.md  HACKING.md  README.md  flake.nix  vcpkg.json
.claude/skills/bmad-reconcile-session/: SKILL.md  customize.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-restructure.md  1-2-domain-types-move-encoding-error-contracts.md  1-3-sqlite-game-store.md  1-4-database-manager-schema-lifecycle-manifest.md  1-5-duckdb-position-schema-scratch-base-rebuild.md  2-1-spdlog-logger-infrastructure.md  2-10-apply-d009-sorted-zobrist-plus-deferred-cleanup.md  2-11-concurrency-exploration-for-serial-import.md  2-2-pgn-reader-pgnlib-adapter.md  2-3-import-worker-game-processing-unit.md  2-4-parallel-import-pipeline-with-checkpoint-resume.md  2-5-import-completion-summary-error-logging.md  2-6-adopt-upstream-chesslib-san-optimization.md  2-7-integrate-pgnlib-import-stream-into-import-pipeline.md  2-8-reprofile-and-tune-remaining-import-storage-path.md  2-9-import-pipeline-performance-optimization.md  3-1-position-search-by-zobrist-hash.md  3-2-opening-statistics-per-position.md  3-3-lazy-opening-tree-with-prefetch.md  3b-1-search-filter-model-and-filtered-game-list.md  3b-2-filtered-opening-stats-and-elo-weighted-ranking.md  3b-3-continuous-elo-distribution-per-continuation.md  3b-4-filtered-opening-tree-traversal.md  4-1-application-shell-config-pgn-file-handler.md  4-1-engine-configuration-lifecycle.md  4-2-real-time-engine-output-crash-isolation.md  4b-1-http-server-scaffold.md  4b-2-position-search-endpoint.md  4b-3-opening-stats-endpoint.md  4b-4-import-trigger-sse-progress-stream.md  4b-5-game-list-endpoint.md  4b-6-single-game-retrieval-endpoint.md  4b-7-openapi-spec.md  4c-1-http-api-contract-hardening.md  4c-2-import-sse-lifecycle-hardening.md  4d-1-legal-moves-and-move-validation-endpoints.md  4d-2-engine-analysis-api-contract.md  4d-3-personal-games-crud-api-and-lan-support.md  4d-4-file-upload-import-and-game-count-endpoints.md  7-1-database-workspace-create-open-recent-scratch.md  (+7 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-14.md  implementation-readiness-report-2026-05-06.md  prd-003-search.md  prd.md  sprint-change-proposal-2026-04-20.md  sprint-change-proposal-2026-04-26.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/custom/: bmad-code-review.toml  bmad-dev-story.toml
bench/san_ab/: CMakeLists.txt  main.cpp
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/: architecture-overview.md  cpp-architecture-review.md  index.md  product-overview.md  requirements-fulfillment.md
docs/api/: openapi.yaml
docs/devlog/: 2026-W17.md  2026-W18.md  2026-W19.md
docs/pages/: about.dox  architecture-overview.dox  product-overview.dox  requirements-fulfillment.dox
memory/: MEMORY.md  feedback_duckdb_c_api.md  feedback_no_k_prefix.md  feedback_sql_style.md  feedback_upstream_ownership.md  feedback_use_official_docs.md  feedback_vcpkg_deferred.md  project_conventions_file.md
packaging/linux/: motif-chess.desktop
plans/: design.md
scripts/: download_twic_pgns.sh  extract_pgn_subset.sh  pre-commit.sh  run_perf_benchmarks.sh
source/motif/app/: CMakeLists.txt  app_config.cpp  app_config.hpp  board_model.cpp  board_model.hpp  database_workspace.cpp  database_workspace.hpp  error.hpp  game_list_model.cpp  game_list_model.hpp  game_navigator.cpp  game_navigator.hpp  main.cpp  pgn_launch_queue.cpp  pgn_launch_queue.hpp  workspace_controller.cpp  workspace_controller.hpp
source/motif/app/qml/: ChessboardPanel.qml  GameListPanel.qml  Main.qml  VariationTree.qml  WorkspaceOverlay.qml
source/motif/chess/: CMakeLists.txt  chess.cpp  chess.hpp
source/motif/db/: CMakeLists.txt  database_manager.cpp  database_manager.hpp  error.hpp  game_store.cpp  game_store.hpp  game_writer.cpp  game_writer.hpp  manifest.cpp  manifest.hpp  motif_db.cpp  move_codec.hpp  position_store.cpp  position_store.hpp  schema.cpp  schema.hpp  scratch_base.cpp  scratch_base.hpp  sqlite_impl.hpp  sqlite_util.hpp  types.hpp
source/motif/engine/: CMakeLists.txt  engine_manager.hpp  error.hpp  motif_engine.cpp
source/motif/http/: CMakeLists.txt  error.hpp  main.cpp  server.cpp  server.hpp
source/motif/import/: CMakeLists.txt  checkpoint.cpp  checkpoint.hpp  error.hpp  import_pipeline.cpp  import_pipeline.hpp  import_worker.cpp  import_worker.hpp  logger.cpp  logger.hpp  motif_import.cpp  pgn_helpers.cpp  pgn_helpers.hpp  pgn_reader.cpp  pgn_reader.hpp
source/motif/search/: CMakeLists.txt  error.hpp  motif_search.cpp  opening_stats.cpp  opening_stats.hpp  opening_tree.cpp  opening_tree.hpp  position_search.cpp  position_search.hpp
specs/001-database-schema/: spec.md
specs/002-import-pipeline/: spec.md
specs/003-search/: spec.md
specs/004-qt-gui/: spec.md
specs/005-position-encoded-move/: spec.md
test/: CMakeLists.txt
test/source/: motif_test.cpp  test_helpers.hpp
test/source/motif_app/: app_config_test.cpp  database_workspace_test.cpp  game_list_model_test.cpp  game_navigator_test.cpp  pgn_launch_queue_test.cpp
test/source/motif_chess/: chess_test.cpp
test/source/motif_db/: database_manager_test.cpp  game_store_test.cpp  game_writer_test.cpp  manifest_test.cpp  move_codec_test.cpp  position_store_test.cpp  schema_test.cpp  scratch_base.cpp  scratch_base.hpp  scratch_base_test.cpp
test/source/motif_engine/: engine_manager_test.cpp
test/source/motif_http/: http_server_test.cpp
test/source/motif_import/: checkpoint_test.cpp  import_pipeline_test.cpp  import_worker_test.cpp  logger_test.cpp  pgn_reader_test.cpp  placeholder_test.cpp
test/source/motif_search/: opening_stats_test.cpp  opening_tree_test.cpp  placeholder_test.cpp  position_search_test.cpp
(+30 files in other folders)
